--- a/about us.html
+++ b/about us.html
@@ -60,8 +60,8 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 
     <div class="w3-justify w3-center">
         <video width="700" controls>
-            <source src="/Users/user/Desktop/HTML GROUP/video/about us.mp4" type="video/mp4">
-            <source src="/Users/user/Desktop/HTML GROUP/video/about us.ogg" type="video/ogg">
+            <source src="video/about us.mp4" type="video/mp4">
+            <source src="video/about us.ogg" type="video/ogg">
 
   
 
