--- a/exclusive.html
+++ b/exclusive.html
@@ -62,7 +62,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/exclusive item (8).jpg" style="width:100%">
+        <img src="image/exclusive item (8).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
           <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -75,7 +75,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/exclusive item (1).jpg" style="width:100%">
+        <img src="image/exclusive item (1).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
           <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -88,7 +88,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/exclusive item (10).jpg" style="width:100%">
+        <img src="image/exclusive item (10).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
           <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -101,7 +101,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/exclusive item (11).jpg" style="width:100%">
+        <img src="image/exclusive item (11).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
           <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -114,7 +114,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/exclusive item (2).jpg" style="width:100%">
+        <img src="image/exclusive item (2).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
           <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -127,7 +127,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/exclusive item (3).jpg" style="width:100%">
+        <img src="image/exclusive item (3).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
           <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -140,7 +140,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/exclusive item (4).jpg" style="width:100%">
+        <img src="image/exclusive item (4).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
           <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -153,7 +153,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/exclusive item (5).jpg" style="width:100%">
+        <img src="image/exclusive item (5).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
           <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -166,7 +166,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/exclusive item (6).jpg" style="width:100%">
+        <img src="image/exclusive item (6).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
           <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -179,7 +179,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/exclusive item (7).jpg" style="width:100%">
+        <img src="image/exclusive item (7).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
           <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -192,7 +192,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/exclusive item (9).jpg" style="width:100%">
+        <img src="image/exclusive item (9).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
           <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -217,7 +217,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
       <div class="w3-col s4">
         <h4>Contact</h4>
         <p>Questions? Go ahead.</p>
-        <form action="/Users/user/Desktop/HTML GROUP/we.php" target="_blank">
+        <form action="/we.php" target="_blank">
           <p><input class="w3-input w3-border" type="text" placeholder="Name" name="Name" required></p>
           <p><input class="w3-input w3-border" type="text" placeholder="Email" name="Email" required></p>
           <p><input class="w3-input w3-border" type="text" placeholder="Subject" name="Subject" required></p>
