--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Image header -->
   <header class="w3-display-container w3-wide" id="home">
-    <img class="w3-image" src="/Users/user/Desktop/HTML GROUP/image/Diliyara Heading.jpg" alt="Fashion Blog" width="1600" height="500">
+    <img class="w3-image" src="image/Diliyara Heading.jpg" alt="Fashion Blog" width="1600" height="500">
     <div class="w3-display-left w3-padding-large">
       <h1 class="w3-text-white"></h1>
       <h1 class="w3-jumbo w3-text-white w3-hide-small"><b></b></h1>
@@ -154,19 +154,19 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="/Users/user/Desktop/HTML GROUP/image/heading slideshow.jpg" style="width:100%">
+  <img src="image/heading slideshow.jpg" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="/Users/user/Desktop/HTML GROUP/image/palestine slideshow.jpg" style="width:100%">
+  <img src="image/palestine slideshow.jpg" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="/Users/user/Desktop/HTML GROUP/image/covid19.jpg" style="width:100%">
+  <img src="image/covid19.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
@@ -227,8 +227,8 @@ function showSlides(n) {
 
         <div class="w3-justify w3-center">
             <video width="400" controls>
-                <source src="/Users/user/Desktop/HTML GROUP/video/handvideo.mp4" type="video/mp4">
-                <source src="/Users/user/Desktop/HTML GROUP/video/handvideo.ogg" type="video/ogg">
+                <source src="video/handvideo.mp4" type="video/mp4">
+                <source src="video/handvideo.ogg" type="video/ogg">
           
           <!-- Example of comment field -->
           <div id="demo3" style="display:none">
@@ -276,7 +276,7 @@ function showSlides(n) {
         <div class="w3-container">
             <h1>ABOUT US<strong></strong></h1>  
             <div class="w3-display-container w3-hover-opacity" style="width:100%">
-              <img src="/Users/user/Desktop/HTML GROUP/image/about us.jpg" alt="Avatar" style="width:100%">
+              <img src="image/about us.jpg" alt="Avatar" style="width:100%">
               <div class="w3-display-middle w3-display-hover w3-xlarge">
                 <a href="about us.html"><button class="w3-button w3-black">CLICK NOW</button> 
               </div>
@@ -294,7 +294,7 @@ function showSlides(n) {
         <div class="w3-container">
             <h1><strong></strong></h1>  
             <div class="w3-display-container w3-hover-opacity" style="width:100%">
-              <img src="/Users/user/Desktop/webdesign/image/tudungpeople.jpg" alt="Avatar" style="width:100%">
+              <img src="image/tudungpeople.jpg" alt="Avatar" style="width:100%">
               <div class="w3-display-middle w3-display-hover w3-xlarge">
                 <a href="https://tudungpeople.com/collections/new-arrival"><button class="w3-button w3-black">TUDUNGPEOPLE</button> 
               </div>
