--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@ function showSlides(n) {
 
         <div class="w3-justify w3-center">
             <video width="400" controls>
-                <source src="video/handvideo.mp4" type="video/mp4">
-                <source src="video/handvideo.ogg" type="video/ogg">
+                <source src="/video/handvideo.mp4" type="video/mp4">
+                <source src="/video/handvideo.ogg" type="video/ogg">
           
           <!-- Example of comment field -->
           <div id="demo3" style="display:none">
