Update add to cart.html

--- a/add to cart.html
+++ b/add to cart.html
@@ -181,7 +181,7 @@ span.price {
 <div class="row">
   <div class="col-75">
     <div class="container">
-      <form action="/Users/user/Desktop/HTML GROUP/thankyou.php">
+      <form action="/thankyou.php">
       
         <div class="row">
           <div class="col-50">
