--- a/new arrivL.html
+++ b/new arrivL.html
@@ -56,7 +56,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 
   <!-- Image header -->
   <div class="w3-display-container w3-container">
-    <img src="/Users/user/Desktop/HTML GROUP/image/arrival.jpg" alt="" style="width:100%">
+    <img src="image/arrival.jpg" alt="" style="width:100%">
     <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
       <h1 class="w3-jumbo w3-hide-small"></h1>
       <h1 class="w3-hide-large w3-hide-medium"></h1>
@@ -72,7 +72,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <p></p>
   <hr>
   <div class="w3-display-container w3-container">
-    <img src="/Users/user/Desktop/HTML GROUP/image/Minimalist New Arrival Shoes Email Header.jpg" alt="" style="width:100%">
+    <img src="image/Minimalist New Arrival Shoes Email Header.jpg" alt="" style="width:100%">
     <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
       <h1 class="w3-jumbo w3-hide-small"></h1>
       <h1 class="w3-hide-large w3-hide-medium"></h1>
@@ -87,7 +87,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <p></p>
   <hr>
   <div class="w3-display-container w3-container">
-    <img src="/Users/user/Desktop/HTML GROUP/image/Pink Brown Elegant New Arrival Items Email Header.jpg" alt="" style="width:100%">
+    <img src="image/Pink Brown Elegant New Arrival Items Email Header.jpg" alt="" style="width:100%">
     <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
       <h1 class="w3-jumbo w3-hide-small"></h1>
       <h1 class="w3-hide-large w3-hide-medium"></h1>
@@ -118,7 +118,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
       <div class="w3-col s4">
         <h4>Contact</h4>
         <p>Questions? Go ahead.</p>
-        <form action="/Users/user/Desktop/HTML GROUP/we.php" target="_blank">
+        <form action="we.php" target="_blank">
           <p><input class="w3-input w3-border" type="text" placeholder="Name" name="Name" required></p>
           <p><input class="w3-input w3-border" type="text" placeholder="Email" name="Email" required></p>
           <p><input class="w3-input w3-border" type="text" placeholder="Subject" name="Subject" required></p>
