Update new arrival index.html

--- a/new arrival index.html
+++ b/new arrival index.html
@@ -62,7 +62,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/handbag (1).jpg" style="width:100%">
+        <img src="image/handbag (1).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -75,7 +75,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/handbag (2).jpg" style="width:100%">
+        <img src="image/handbag (2).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -88,7 +88,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/handbag (3).jpg" style="width:100%">
+        <img src="image/handbag (3).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -101,7 +101,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/handbag (4).jpg" style="width:100%">
+        <img src="image/handbag (4).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -114,7 +114,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/handbag (5).jpg" style="width:100%">
+        <img src="image/handbag (5).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -127,7 +127,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/handbag.jpg" style="width:100%">
+        <img src="image/handbag.jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -140,7 +140,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/handbag (6).jpg" style="width:100%">
+        <img src="image/handbag (6).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -153,7 +153,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/Users/user/Desktop/HTML GROUP/image/handbag (7).jpg" style="width:100%">
+        <img src="image/handbag (7).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
