--- a/premium.html
+++ b/premium.html
@@ -62,7 +62,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/image/premium (1).jpg" style="width:100%">
+        <img src="image/premium (1).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -75,7 +75,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/image/premium (2).jpg" style="width:100%">
+        <img src="image/premium (2).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -89,7 +89,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/image/premium (3).jpg" style="width:100%">
+        <img src="image/premium (3).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -102,7 +102,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/image/premium (4).jpg" style="width:100%">
+        <img src="image/premium (4).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -115,7 +115,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/image/premium (5).jpg" style="width:100%">
+        <img src="image/premium (5).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -128,7 +128,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/image/premium (6).jpg" style="width:100%">
+        <img src="image/premium (6).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
@@ -141,7 +141,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-col l3 s6">
     <div class="w3-container">
       <div class="w3-display-container">
-        <img src="/image/premium (7).jpg" style="width:100%">
+        <img src="image/premium (7).jpg" style="width:100%">
         <span class="w3-tag w3-display-topleft">Sale</span>
         <div class="w3-display-middle w3-display-hover">
             <a href="add to cart.html"><button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
