--- a/exclusive.html
+++ b/exclusive.html
@@ -258,7 +258,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     </div>
   </footer>
 
-  <div class="w3-black w3-center w3-padding-24">Developing for IMS456 only" title="W3.CSS"</div>
+  <div class="w3-black w3-center w3-padding-24">Developing for IMS456 only"</div>
 
   <!-- End page content -->
 </div>
