--- a/index.html
+++ b/index.html
@@ -352,8 +352,7 @@ function showSlides(n) {
 <!-- Footer -->
 <footer class="w3-container w3-dark-grey" style="padding:32px">
   <a href="#" class="w3-button w3-black w3-padding-large w3-margin-bottom"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-</footer>
+  <p<div class="w3-black w3-center w3-padding-24">Developing for IMS456 only
 
 <script>
 // Toggle between hiding and showing blog replies/comments
