--- a/add to cart.html
+++ b/add to cart.html
@@ -181,7 +181,7 @@ span.price {
 <div class="row">
   <div class="col-75">
     <div class="container">
-      <form action="thankyou.php">
+      <form action="index.php">
       
         <div class="row">
           <div class="col-50">
